--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
 
-    <todo-data user="{{user}}" todos="{{todos}}"></todo-data>
+    <todo-data location="https://polymer-todo.firebaseio.com" user="{{user}}" todos="{{todos}}"></todo-data>
 
     <todo-view class="flex" route="{{route}}" todos="{{todos}}"></todo-view>
 
