--- a/app/elements/todo-input/todo-input.html
+++ b/app/elements/todo-input/todo-input.html
@@ -15,6 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <style>
     :host {
       display: block;
+      padding-left: 140px;
     }
     paper-input {
       display: inline-block;
