--- a/app/elements/todo-view/todo-view.html
+++ b/app/elements/todo-view/todo-view.html
@@ -110,6 +110,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       height: 900px;
     }
 
+    todo-list, todo-input {
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
     /* Breakpoints */
 
     /* Small */
