--- a/app/elements/todo-input/todo-input.html
+++ b/app/elements/todo-input/todo-input.html
@@ -25,13 +25,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       };
       /* These styles are not DRY :\ */
       --paper-input-container-label: {
-        font-size: 1rem;
+        font-size: 20px;
         font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
         font-weight: normal;
         color: #9E9E9E;
       };
       --paper-input-container-input: {
-        font-size: 1rem;
+        font-size: 20px;
         font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
       };
       --paper-input-container-underline: {
@@ -50,7 +50,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     paper-button {
       background: #E0E0E0;
       color: #9E9E9E;
-      font-size: 0.875rem; /* 14px */
+      font-size: 14px;
     }
     paper-button[focused] {
       /* https://github.com/PolymerElements/paper-button/pull/43 */
