--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -16,8 +16,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     :host {
       display: block;
     }
-    todo-item:first-child {
-      margin: 0;
+    todo-item:first-of-type {
+      margin-top: 0;
     }
     todo-item {
       margin: 16px 0;
