--- a/app/elements/todo-view/todo-view.html
+++ b/app/elements/todo-view/todo-view.html
@@ -111,11 +111,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     todo-list {
-      margin-top: 100px;
+      margin: 64px auto 0;
     }
 
     todo-list, todo-input {
       max-width: 1000px;
+    }
+
+    todo-input {
       margin: 0 auto;
     }
 
