--- a/app/elements/todo-data/todo-data.html
+++ b/app/elements/todo-data/todo-data.html
@@ -8,8 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../bower_components/firebase-element/firebase-collection.html">
-<link rel="import" href="../../bower_components/firebase-element/firebase-auth.html">
+<!-- <link rel="import" href="../../bower_components/firebase-element/firebase-collection.html"> -->
+<!-- <link rel="import" href="../../bower_components/firebase-element/firebase-auth.html"> -->
 <link rel="import" href="../../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../../bower_components/paper-dialog/paper-dialog.html">
@@ -68,8 +68,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <firebase-collection location="{{userLocation}}"
                          ref="{{ref}}"
                          data="{{fbTodos}}"
-                         on-firebase-value="_firebaseLoaded"
-                         log>
+                         on-firebase-value="_firebaseLoaded">
     </firebase-collection>
 
     <!-- Backfill todos from localstorage. This prevents an initial flash while
