--- a/app/elements/todo-input/todo-input.html
+++ b/app/elements/todo-input/todo-input.html
@@ -12,22 +12,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
 <dom-module id="todo-input">
+
   <template>
 
     <style>
       :host {
         display: block;
       }
+
       .input-wrapper {
         padding-left: 70px;
       }
+
       paper-input {
         display: inline-block;
         width: 65%;
         --paper-input-container: {
           padding-bottom: 0;
         };
-        /* These styles are not DRY :\ */
+
+        /* These styles are not DRY :( */
         --paper-input-container-label: {
           font-size: 20px;
           font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
@@ -46,16 +50,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           top: 7px;
         };
       }
+
       paper-input[focused] + paper-button,
       paper-button[focused] {
         background: var(--default-primary-color);
         color: var(--text-primary-color);
       }
+
       paper-button {
         background: #E0E0E0;
         color: #9E9E9E;
         font-size: 14px;
       }
+
       paper-button[focused] {
         /* https://github.com/PolymerElements/paper-button/pull/43 */
         outline-width: 3px;
@@ -75,6 +82,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </div>
 
   </template>
+
 </dom-module>
 <script>
   Polymer({
